--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -45,6 +45,7 @@
 
 <th:block th:fragment="modal">
     <script src="/js/autocomplete.js"></script>
+    <script src="/js/errorMessage.js"></script>
     <script src="/js/modal.js"></script>
     <script src="/js/recommend.js"></script>
 </th:block>
