[update] リログしても状態を保持しているようにした
- リログで内容を消えないようにした

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -72,5 +72,9 @@
         }
     </script>
 </th:block>
+
+<th:block th:fragment="packing">
+    <script src="/js/packings.js"></script>
+</th:block>
 </body>
 </html>
