--- a/src/main/resources/templates/share/packings.html
+++ b/src/main/resources/templates/share/packings.html
@@ -8,16 +8,8 @@
     <form id="item-form" action="/share/packings" method="POST" class="w-full sm:max-w-lg max-w-xs m-24">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div id="item-list" class="space-y-4">
-            <!-- リストを表示 -->
-            <div class="item-set flex items-center space-x-4" th:each="packing, iterStat : ${packings}">
-                <input type="checkbox" name="items[${iterStat.index}].checked" th:checked="${packing.checked}" class="w-5 h-5">
-                <input id="item-${iterStat.index}" name="items[${iterStat.index}].value" type="text" th:value="${packing.value}" placeholder="持ち物を入力" class="w-full input">
-                <button type="button" class="delete-button">
-                    <th:block th:replace="~{fragment/svg :: trash}"/>
-                </button>
-            </div>
             <!-- 持ち物がない場合、空のinputを表示 -->
-            <div th:if="${#lists.isEmpty(packings)}" class="item-set flex items-center space-x-4">
+            <div class="item-set flex items-center space-x-4">
                 <input type="checkbox" name="items[0].checked" class="w-5 h-5">
                 <input id="item-0" name="items[0].value" type="text" placeholder="持ち物を入力" class="w-full input">
                 <button type="button" class="delete-button">
