e.target.idでの挙動がおかしくなる為th:field削除

--- a/src/main/resources/templates/fragment/update-modal.html
+++ b/src/main/resources/templates/fragment/update-modal.html
@@ -184,7 +184,7 @@
                         <input th:field="*{googlePlaceId}" th:id="'placeUpdatePlaceId'+${num}" class="hidden" type="text"/>
                         <input th:field="*{latitude}" th:id="'placeUpdateLat'+${num}" class="hidden" type="text"/>
                         <input th:field="*{longitude}" th:id="'placeUpdateLng'+${num}" class="hidden" type="text"/>
-                        <input th:field="*{id}" class="hidden" type="number">
+                        <input th:value="*{id}" th:id="'id'+${num}" class="hidden" type="number">
                         <input th:field="*{dayId}" class="hidden" type="number"/>
                         <input th:field="*{startTime}" th:id="'placeUpdateStartTime'+${num}" class="hidden" type="time"/>
                         <input th:field="*{endTime}" th:id="'placeUpdateEndTime'+${num}" class="hidden" type="time"/>
