滞在時間のinputにmin=1を設定

--- a/src/main/resources/templates/fragment/modal.html
+++ b/src/main/resources/templates/fragment/modal.html
@@ -192,7 +192,7 @@
                             <div class="w-1/2 pl-3">
                                 <label class="block mb-2" th:for="'stayTime' + ${num}">滞在時間</label>
                                 <div class="flex items-end">
-                                    <input class="w-full input focus:ring-0" th:id="'stayTime' + ${num}" th:name="'stayTime' + ${num}" type="number" value="30"/>
+                                    <input class="w-full input focus:ring-0" th:id="'stayTime' + ${num}" th:name="'stayTime' + ${num}" type="number" min="1" value="30"/>
                                     <span>分</span>
                                 </div>
                             </div>
