--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -47,6 +47,7 @@
     <script src="/js/autocomplete.js"></script>
     <script src="/js/errorMessage.js"></script>
     <script src="/js/formValidate.js"></script>
+    <script src="/js/modalElement.js"></script>
     <script src="/js/modalForm.js"></script>
     <script src="/js/modal.js"></script>
     <script src="/js/recommend.js"></script>
