おすすめFormのinput追加・修正

--- a/src/main/resources/templates/fragment/recommend.html
+++ b/src/main/resources/templates/fragment/recommend.html
@@ -50,12 +50,12 @@
                         <input class="hidden" name="googlePlaceId" th:value="${place.googlePlaceId}" th:id="'recommendPlaceId'+${placeStatus.index}" type="text" required/>
                         <input class="hidden" name="latitude" th:value="${place.latitude}" th:id="'recommendLat'+${placeStatus.index}" type="text" required/>
                         <input class="hidden" name="longitude" th:value="${place.longitude}" th:id="'recommendLng'+${placeStatus.index}" type="text" required/>
-                        <input class="hidden" name="dayId" th:value="${place.dayId}" th:id="'recommendDayId' + ${num}" type="number"/>
-                        <input class="hidden" name="startTime" th:value="${place.startTime}" th:id="'recommendStartTime' + ${num}" type="time"/>
-                        <input class="hidden" name="endTime" th:value="${place.endTime}" th:id="'recommendEndTime' + ${num}" type="time"/>
-                        <input class="hidden" name="toPolyLine" th:value="${place.toPolyLine}" th:id="'recommendPolyline' + ${num}" type="text"/>
-                        <input class="hidden" name="toTravelTime" th:value="${place.toTravelTime}" th:id="'recommendTravelTime' + ${num}" type="number"/>
-                        <input class="hidden" name="toTransportation" th:value="${place.toTransportation}" th:id="'recommendTrans' + ${num}" type="text"/>
+                        <input class="hidden" name="dayId" th:value="${place.dayId}" th:id="'recommendDayId' + ${placeStatus.index}" type="number"/>
+                        <input class="hidden" name="startTime" th:value="${#temporals.format(place.startTime, 'HH:mm')}" th:id="'recommendStartTime' + ${placeStatus.index}" type="time"/>
+                        <input class="hidden" name="endTime" th:value="${#temporals.format(place.endTime, 'HH:mm')}" th:id="'recommendEndTime' + ${placeStatus.index}" type="time"/>
+                        <input class="hidden" name="toPolyLine" th:value="${place.toPolyLine}" th:id="'recommendPolyline' + ${placeStatus.index}" type="text"/>
+                        <input class="hidden" name="toTravelTime" th:value="${place.toTravelTime}" th:id="'recommendTravelTime' + ${placeStatus.index}" type="number"/>
+                        <input class="hidden" name="toTransportation" th:value="${place.toTransportation}" th:id="'recommendTrans' + ${placeStatus.index}" type="text"/>
                         <div>
                             <label class="block mb-2" th:for="'recommend'+${placeStatus.index}">目的地<span class="ml-2 text-sm text-danger">必須</span></label>
                             <input class="w-full input focus:ring-0 bg-gray-100" th:id="'recommend'+${placeStatus.index}" name="name" th:value="${place.name}" type="text" disabled/>
@@ -71,7 +71,7 @@
                             <div class="w-1/2 pl-3">
                                 <label class="block mb-2" th:for="'recommendStayTime'+${placeStatus.index}">滞在時間</label>
                                 <div class="flex items-end">
-                                    <input class="w-full input focus:ring-0" th:id="'recommendStayTime'+${placeStatus.index}" name="stayTime" type="number"/>
+                                    <input class="w-full input focus:ring-0" th:id="'recommendStayTime'+${placeStatus.index}" th:name="'recommendStayTime'+${placeStatus.index}" min="1" value="30" name="stayTime" type="number"/>
                                     <span>分</span>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                                             <path clip-rule="evenodd" d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm11-4a1 1 0 1 0-2 0v4a1 1 0 0 0 .293.707l3 3a1 1 0 0 0 1.414-1.414L13 11.586V8Z" fill-rule="evenodd"/>
                                         </svg>
                                     </div>
-                                    <input class="w-full input focus:ring-0" max="23:59" min="00:00" placeholder="--:--" th:id="'recommendDesiredStartTime'+${placeStatus.index}" name="desiredStartTime" th:value="${place.desiredStartTime}" type="time"/>
+                                    <input class="w-full input focus:ring-0" max="23:59" min="00:00" placeholder="--:--" th:id="'recommendDesiredStartTime'+${placeStatus.index}" name="desiredStartTime" type="time"/>
                                 </div>
                                 <span class="pr-3 pl-3">～</span>
                                 <div class="relative w-1/2">
@@ -95,7 +95,7 @@
                                             <path clip-rule="evenodd" d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm11-4a1 1 0 1 0-2 0v4a1 1 0 0 0 .293.707l3 3a1 1 0 0 0 1.414-1.414L13 11.586V8Z" fill-rule="evenodd"/>
                                         </svg>
                                     </div>
-                                    <input class="w-full input focus:ring-0" max="23:59" min="00:00" placeholder="--:--" th:id="'recommendDesiredEndTime'+${placeStatus.index}" name="desiredEndTime" th:value="${place.desiredStartTime}" type="time"/>
+                                    <input class="w-full input focus:ring-0" max="23:59" min="00:00" placeholder="--:--" th:id="'recommendDesiredEndTime'+${placeStatus.index}" name="desiredEndTime" type="time"/>
                                 </div>
                             </div>
                         </div>
