[refactor] actionをThymeleafを使う形に変更

--- a/src/main/resources/templates/share/packings.html
+++ b/src/main/resources/templates/share/packings.html
@@ -5,8 +5,8 @@
 <th:block th:replace="~{fragment/header :: header}"/>
 <main class="flex flex-col items-center flex-grow">
     <h2 class="text-center sm:text-3xl text-2xl font-medium mt-10">持ち物リスト</h2>
-    <form id="item-form" action="/share/packings" method="POST" class="w-full sm:max-w-lg max-w-xs m-24">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+    <form id="item-form" th:action="@{/share/packings}" method="POST" class="w-full sm:max-w-lg max-w-xs m-24">
+        <input type="hidden"/>
         <div id="item-list" class="space-y-4">
             <!-- 持ち物がない場合、空のinputを表示 -->
             <div class="item-set flex items-center space-x-4">
