--- a/src/main/resources/templates/register/index.html
+++ b/src/main/resources/templates/register/index.html
@@ -10,10 +10,10 @@
     <div th:if="${param.error}" class="error-message">
         メールアドレス、またはパスワードが違います
     </div>
-    <form th:action="@{/register}" th:object="${registerForm}" method="post" class="w-full sm:max-w-lg max-w-xs">
+    <form th:action="@{/register}" th:object="${createUserForm}" method="post" class="w-full sm:max-w-lg max-w-xs">
         <div class="my-10">
             <label for="mail" class="block sm:text-base text-sp-default sm:my-1 my-0.5 text-sm">メールアドレス</label>
-            <input th:field="*{mailAddress}" id="mail" type="email" required class="w-full input"/>
+            <input th:field="*{email}" id="mail" type="email" required class="w-full input"/>
         </div>
         <div class="my-10">
             <label for="password" class="block sm:text-base text-sp-default sm:my-1 my-0.5 text-sm">パスワード</label>
